# aoc

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.tpl.md  bacon.toml  cargo_bench_filter.jq  day.rs.tpl  day.tpl.rs  rust-toolchain.toml
src/: lib.rs
