[package]
name = "aoc"
version = "0.1.0"
authors = ["Paul Horn <dev@knutwalker.engineer>"]
description = "Advent of Code solutions for @knutwalker"
edition = "2021"
license = "MIT"
publish = false
default-run = "aoc2022"

[dependencies]
arrayvec = "0.7.2"
atoi = "2.0.0"
bitvec = "1.0.1"
const-combinations = "2.0.3"
derive_more = { version = "0.99.17", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "index",
    "index_mut",
], default-features = false }
disjoint-sets = "0.4.2"
fxhash = "0.2.1"
humantime = "2.1.0"
indexmap = "1.9.2"
num_enum = "0.5.7"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
parse-display = "0.6.0"
priority-queue = "1.3.0"
tap = "1.0.1"

# bit-set = "0.5.2"
# chrono = "0.4.19"
# const_format = "0.2.22"
# either = "1.6.1"
# eyre = "0.6.5"
# fancy-regex = "0.7.1"
# fastrand = "1.5.0"
# graph = "0.1.6"
# itertools = "0.10.1"
# num = "0.4.0"
# once_cell = "1.8.0"
# regex = "1.5.4"
# thiserror = "1.0.30"

[[bin]]
name = "aoc2020"

[[bin]]
name = "aoc2021"

[[bin]]
name = "aoc2022"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
rpath = false
strip = true
